Drive the suite from 168 to 28 with the round-two diagnosis findings
Only the Rebol suite counts now, so each batch runs the 13-second
suite alone and JEBOL's own tests are corrected or left behind as the
suite dictates. A second nine-agent diagnosis wrote 62 findings to
docs/suite-cluster-diagnoses-round2.md; nearly all are implemented:

- a bare parameter refuses unset, as TS_VALUE does; the natives whose
  C spec says any-type! carry the full set explicitly
- CHANGE and INSERT at a position stranded past the tail clamp to the
  tail and append; a negative /part on CHANGE counts backwards
- DO/NEXT steps strings; DO of a string catches a top-level RETURN;
  a paren that shrinks the parse input is re-read by both parsers
- parse REMOVE and CHANGE take a marked position as a span; NOT, THEN,
  LIMIT, REJECT, RETURN, FAIL, compound AHEAD, the get-word input
  switch; unset and function rule items raise parse-rule; paths in
  rules evaluate; SOME of a no-progress round counts it first
- COLLECT SET assigns its word before the rule runs, KEEP COPY keeps
  the typed slice, a binary keeps bytes as integers, KEEP PICK of a
  paren keeps its value, OPT resolves named rules
- urls that would not re-load mold as construction syntax, and a
  positioned series molds its construct body in body notation
- protect covers bitsets, /deep reaches a word's value, /words leaves
  the object open, /values on a path protects the path itself,
  /hide on a series raises bad-refines, and delect gates then declines
- objects: set/make clone deeply and rebind only source-frame words,
  construct floors unset to none, empty? answers, bind refuses a
  foreign word with not-in-context, append/part takes a position
- loop frames are internal, so context? inside a loop answers none
- apply fills the whole frame, re-applies DO of a function, and knows
  an operator's arity; system/options/boot names the running JVM
- the lexer reports unbalanced delimiters as 'missing with the token
  in arg1, ref